<resources>
    <string name="app_name">Guess the Celebrity</string>
    <string name="about_the_app">About the App</string>
    <string name="about_description">Guess the Celebrity Game\n\nCreated by: Stephanie Maru and Hyunjung Lim\nDate: March 2025\n\nThis app lets users test their knowledge by guessing celebrities from pictures. Includes settings to customize experience and themes.</string>
    <string name="celebrity_image">Celebrity image</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="apply">Apply</string>
    <string name="select_theme">Select Theme:</string>
    <string name="number_of_questions">Number of Questions:</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="feedback_placeholder" />
</resources>