<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_theme"
            android:textSize="18sp"
            android:textColor="?attr/colorOnBackground" />

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textColor="?attr/colorOnBackground" />

            <RadioButton
                android:id="@+id/radioDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:textColor="?attr/colorOnBackground" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_questions"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorOnBackground" />

        <RadioGroup
            android:id="@+id/questionCountGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textColor="?attr/colorOnBackground" />

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="?attr/colorOnBackground" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:onClick="applySettings"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorOnPrimary" />
    </LinearLayout>
</ScrollView>
